Changed Password from Forgot Password

--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,9 +1,9 @@
 {% extends "base_auth.html" %}
-{% block title %}Forgot Password - Bajeti{% endblock %}
+{% block title %}Change Password - Bajeti{% endblock %}
 {% block content %}
 <section class="p-login">
   <div class="p-forgotpassword-container">
-    <h1 class="p-input-header">Forgot Password</h1>
+    <h1 class="p-input-header">Change Password</h1>
 
     {% if error %}
     <div class="p-alert-error">
