--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -51,7 +51,7 @@ Login - Bajeti
         <a class="p-links" href="/register">Register</a>
       </p>
       <p>
-        Forgot password?
+        Change Password?
         <a class="p-links" href="/forgot_password">Reset Password</a>
       </p>
     </div>
