--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -84,7 +84,7 @@ Edit Profile - Bajeti
           Want to reset your password? Click below to start the process.
         </p>
         <a href="/forgot_password" class="p-forgot-btn">
-          <i class="fa fa-key"></i> Forgot Password
+          <i class="fa fa-key"></i> Change Password
         </a>
       </div>
 
