--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -99,7 +99,7 @@ Register - Bajeti
             <a class="p-links" href="/login">Login</a>
           </p>
           <p>
-            Forgot password?
+            Change Password?
             <a class="p-links" href="/forgot_password">Reset Password</a>
           </p>
         </div>
