Fixed error of adding values

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -234,7 +234,7 @@
           <label>Description</label>
           <input name="description" placeholder="Enter Expense Description (Optional)">
           <label>Month</label>
-          <input name="month" placeholder="YYYY-MM" value="{{ now }}" disabled>
+          <input name="month" placeholder="YYYY-MM" value="{{ now }}" readonly>
           <button type="submit" class="p-modal-btn" id="closeAddExpenseBtn{{ cat.id }}">Add Expense</button>
         </div>
       </form>
