--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='css/analytics.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/modal.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/alert.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/toast.css') }}">
     </head>
     
     <body class="p-container light" id="pMain">
@@ -59,5 +60,6 @@
       <script src="{{ url_for('static', path='js/login.js') }}" defer></script>
       <script src="{{ url_for('static', path='js/register.js') }}" defer></script>
       <script src="{{ url_for('static', path='js/bajeti.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/toast.js') }}" defer></script>
   </body>
 </html>
