fix:#30 Make improvements on Iphone 6s plus display

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -515,6 +515,21 @@ select {
     margin-top: .4em;
 }
 
+/* --- FIX SAFARI TOUCH ISSUES --- */
+.p-detail-card {
+    overflow: visible !important;
+    -webkit-overflow-scrolling: touch;
+}
+
+/* Ensure invisible overlays don’t block clicks */
+.p-overlay {
+    pointer-events: none;
+}
+
+.p-overlay.show {
+    pointer-events: auto;
+}
+
 /* Prevent zoom on input focus in modals */
 @media screen and (max-width: 768px) {
 
