--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -16,6 +16,9 @@ Register - Bajeti
     </div>
     {% endif %}
 
+    <div id="pSnackBar">
+    </div>
+
     <form method="POST" action="/register">
       <div class="p-signin-details">
         <label for="first_name">First Name</label>
