--- a/app/static/css/alert.css
+++ b/app/static/css/alert.css
@@ -62,6 +62,8 @@
     font: var(--p);
     cursor: pointer;
     transition: all .2s ease-in-out;
+    flex: 1;
+    min-width: 0;
 }
 
 .p-alert-error {
