--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -529,6 +529,11 @@ select {
     pointer-events: auto;
 }
 
+.chart-container {
+    width: 100%;
+    height: 260px;
+}
+
 /* Prevent zoom on input focus in modals */
 @media screen and (max-width: 768px) {
 
