Created Category Progress summary to fix issue #16 3

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -557,6 +557,10 @@ select {
     font-weight: 600;
 }
 
+.p-category-status {
+    font-size: 0.9em;
+}
+
 .p-category-status.ok {
     color: var(--success);
     /* green */
