--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -531,11 +531,13 @@ select {
 
 /* ---------------------- Category Progress section ---------------------- */
 .p-category-progress-list {
+    width: 100%;
+    box-sizing: border-box;
     display: grid;
     gap: 0.6em 0.8em;
     margin: 0.8em 0;
     padding: 0 0.6em;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .p-category-item {
@@ -586,6 +588,8 @@ select {
     width: 0;
     /* start at 0 */
     transition: width 1s ease-out;
+    min-height: 6px;
+    display: block;
 }
 
 .p-ok-fill {
