--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -535,7 +535,7 @@ select {
     gap: 0.6em 0.8em;
     margin: 0.8em 0;
     padding: 0 0.6em;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
 }
 
 .p-category-item {
